# aoc

./: .gitignore  README.md
2019/day 01/: puzzle01_01.hs  puzzle01_02.hs
2019/day 02/: puzzle02_01.hs  puzzle02_02.hs
2019/day 03/: puzzle03_01.hs  puzzle03_02.hs
2019/day 04/: puzzle04_01.hs  puzzle04_02.hs
2020/01/: puzzle01_1.go
2020/01/02/: puzzle01_2.go
2020/01/a/: puzzle01_1.go
2020/01/b/: puzzle01_2.go
2020/02/02/: puzzle02_2.go
2020/02/a/: puzzle02_1.go
2020/03/a/: puzzle03_1.go
2020/03/b/: puzzle03_2.go
2020/04/01/: puzzle04_1.go
2020/04/b/: puzzle04_2.go
2020/05/a/: puzzle05a.go
2020/05/b/: puzzle05b.go
2020/06/a/: puzzle06a.go
2020/06/b/: puzzle06b.go
2020/07/a/: puzzle07a.go
2020/07/b/: puzzle07b.go
2020/08/a/: puzzle08a.go
2020/08/b/: puzzle08b.go
2020/09/a/: puzzle09a.go
2020/09/b/: puzzle09b.go
2020/10/a/: puzzle10a.go
2020/10/b/: puzzle10b.go
2020/11/a/: puzzle11a.go
2020/11/b/: puzzle11b.go
2020/12/a/: puzzle12a.go
2021/: .gitignore
2021/01/: a.f90  b.f90
2021/02/: a.f90  b.f90
2021/03/: a.f90  b.f90
2021/04/: a.f90  b.f90
2021/05/: a.f90  b.f90
2021/06/: a.f90  b.f90
2021/07/: a.f90  b.f90
2021/08/: a.f90  b.f90
2021/09/: a.f90  b.f90  pair_stack.f90
2021/10/: a.f90  b.f90
2021/11/: a.f90
2021/13/: a.f90  b.f90
2022/: Cargo.toml
2022/01/: a.rs  b.rs
2022/02/: a.rs  b.rs
2022/03/: a.rs  b.rs
2022/04/: a.rs  b.rs
2022/05/: a.rs  b.rs
2022/06/: a.rs  b.rs
2022/07/: a.rs  b.rs
2022/08/: a.rs  b.rs
2022/09/: a.rs  b.rs
2022/10/: a.rs  b.rs
2022/11/: a.rs
2023/01/: a.sh  b.sh
2023/02/: a.bash  b.bash
2023/04/: a.sh  b.sh
2023/05/: a.sh
(+7 files in other folders)
