[package]
name = "AoC22"
version = "1.0.0"
authors = [ "Dominik" ]

[[bin]]
name = "01a"
path = "01/a.rs"

[[bin]]
name = "01b"
path = "01/b.rs"

[[bin]]
name = "02a"
path = "02/a.rs"

[[bin]]
name = "02b"
path = "02/b.rs"

[[bin]]
name = "03a"
path = "03/a.rs"

[[bin]]
name = "03b"
path = "03/b.rs"

[[bin]]
name = "04a"
path = "04/a.rs"

[[bin]]
name = "04b"
path = "04/b.rs"

[[bin]]
name = "05a"
path = "05/a.rs"
